--- a/_config.yaml
+++ b/_config.yaml
@@ -29,43 +29,5 @@ rss_path: /rss.xml
 atom_path: /atom.xml
 host: 0.0.0.0
 
-############################################################
-# Site configuration for the Jekyll 3 Pagination Gem
-# The values here represent the defaults if nothing is set
-pagination:
-  enabled: true
-
-  # How many objects per paginated page, used to be `paginate` (default: 0, means all)
-  per_page: 8
-
-  # The permalink structure for the paginated pages (this can be any level deep)
-  permalink: '/page/:num/' # Pages are index.html inside this folder (default)
-  #permalink: '/page/:num.html' # Pages are simple html files
-  #permalink: '/page/:num' # Pages are html files, linked jekyll extensionless permalink style.
-
-  # Optional the title format for the paginated pages (supports :title for original page title, :num for pagination page number, :max for total number of pages)
-  title: ':title - page :num'
-
- # Optional,omit or set both before and after to zero to disable.
- # Controls how the pagination trail for the paginated pages look like.
-  trail:
-    before: 2
-    after: 2
-
-autopages:
-  enabled: true
-
-  # Collection pages, omit to disable
-  collections:
-    enabled: false
-
-  # Tag pages, omit to disable
-  tags:
-    layouts:
-      - 'autopage_tags.html'
-    title: 'Posts tagged with :tag' # :tag is replaced by the tag name
-    permalink: '/tags/:tag'
-    silent: false
-    slugify:
-      mode: 'default'   # :tag is slugified.
-      case: false
+paginate: 8
+paginate_path: "/page/:num"
